[package]
name = "book-archive-service"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera", "minijinja"]